@@ -205,7 +205,9 @@ typedef OptionRange optionRange;
     v(bool, logGC, false) \
     v(unsigned, gcMaxHeapSize, 0) \
     v(bool, recordGCPauseTimes, false) \
-    v(bool, logHeapStatisticsAtExit, false) 
+    v(bool, logHeapStatisticsAtExit, false) \
+    \
+    v(bool, neverDeleteVMInCommandLine, false)
 
 class Options {
 public:
